cmake_minimum_required (VERSION 3.0)
project (RSC)

# The version number.
set (Tutorial_VERSION_MAJOR 0)
set (Tutorial_VERSION_MINOR 1)

#Link all includes
include_directories(
"C:/programmation/lib/Eigen"
"C:/programmation/lib/VTK/include"
"C:/programmation/lib/FLANN/include"
"C:/programmation/lib/Boost/include"
"C:/programmation/lib/PCL/include"
"C:/programmation/lib/OSGEO/x64/include"
"C:/programmation/lib/OpenCV/include"
"C:/programmation/lib/PDAL/include/pdal"
)

#link all lib
link_directories(
C:/programmation/lib/VTK/lib/x64/Release
C:/programmation/lib/Boost/lib/x64/Release
C:/programmation/lib/PCL/lib/x64/Release
C:/programmation/lib/FLANN/lib/x64/Release
C:/programmation/lib/OpenCV/lib/x64/Release
C:/programmation/lib/OSGEO/x64/lib
C:/programmation/lib/PDAL/lib/x64/Release
)

# Add the executable
add_executable (RSC 
main.cpp

GroundTruth.cpp
GroundTruth.h
Classifier.cpp
Classifier.h
Cloud.cpp
Cloud.h

fonctions.cpp
fonctions.h
test.h
)

# Add libs 
target_link_libraries (RSC
flann_cpp_s.lib
vtkalglib-8.1.lib
vtkChartsCore-8.1.lib
vtkCommonColor-8.1.lib
vtkCommonComputationalGeometry-8.1.lib
vtkCommonCore-8.1.lib
vtkCommonDataModel-8.1.lib
vtkCommonExecutionModel-8.1.lib
vtkCommonMath-8.1.lib
vtkCommonMisc-8.1.lib
vtkCommonSystem-8.1.lib
vtkCommonTransforms-8.1.lib
vtkDICOMParser-8.1.lib
vtkDomainsChemistry-8.1.lib
vtkDomainsChemistryOpenGL2-8.1.lib
vtkexoIIc-8.1.lib
vtkexpat-8.1.lib
vtkFiltersAMR-8.1.lib
vtkFiltersCore-8.1.lib
vtkFiltersExtraction-8.1.lib
vtkFiltersFlowPaths-8.1.lib
vtkFiltersGeneral-8.1.lib
vtkFiltersGeneric-8.1.lib
vtkFiltersGeometry-8.1.lib
vtkFiltersHybrid-8.1.lib
vtkFiltersHyperTree-8.1.lib
vtkFiltersImaging-8.1.lib
vtkFiltersModeling-8.1.lib
vtkFiltersParallel-8.1.lib
vtkFiltersParallelGeometry-8.1.lib
vtkFiltersParallelImaging-8.1.lib
vtkFiltersParallelMPI-8.1.lib
vtkFiltersParallelVerdict-8.1.lib
vtkFiltersPoints-8.1.lib
vtkFiltersProgrammable-8.1.lib
vtkFiltersSelection-8.1.lib
vtkFiltersSMP-8.1.lib
vtkFiltersSources-8.1.lib
vtkFiltersStatistics-8.1.lib
vtkFiltersTexture-8.1.lib
vtkFiltersTopology-8.1.lib
vtkFiltersVerdict-8.1.lib
vtkfreetype-8.1.lib
vtkGeovisCore-8.1.lib
vtkgl2ps-8.1.lib
vtkglew-8.1.lib
vtkGUISupportQt-8.1.lib
vtkGUISupportQtOpenGL-8.1.lib
vtkGUISupportQtSQL-8.1.lib
vtkhdf5-8.1.lib
vtkhdf5_hl-8.1.lib
vtkImagingColor-8.1.lib
vtkImagingCore-8.1.lib
vtkImagingFourier-8.1.lib
vtkImagingGeneral-8.1.lib
vtkImagingHybrid-8.1.lib
vtkImagingMath-8.1.lib
vtkImagingMorphological-8.1.lib
vtkImagingSources-8.1.lib
vtkImagingStatistics-8.1.lib
vtkImagingStencil-8.1.lib
vtkInfovisCore-8.1.lib
vtkInfovisLayout-8.1.lib
vtkInteractionImage-8.1.lib
vtkInteractionStyle-8.1.lib
vtkInteractionWidgets-8.1.lib
vtkIOAMR-8.1.lib
vtkIOCore-8.1.lib
vtkIOEnSight-8.1.lib
vtkIOExodus-8.1.lib
vtkIOExport-8.1.lib
vtkIOExportOpenGL2-8.1.lib
vtkIOGeometry-8.1.lib
vtkIOImage-8.1.lib
vtkIOImport-8.1.lib
vtkIOInfovis-8.1.lib
vtkIOLegacy-8.1.lib
vtkIOLSDyna-8.1.lib
vtkIOMINC-8.1.lib
vtkIOMovie-8.1.lib
vtkIOMPIImage-8.1.lib
vtkIOMPIParallel-8.1.lib
vtkIONetCDF-8.1.lib
vtkIOParallel-8.1.lib
vtkIOParallelNetCDF-8.1.lib
vtkIOParallelXML-8.1.lib
vtkIOPLY-8.1.lib
vtkIOSQL-8.1.lib
vtkIOTecplotTable-8.1.lib
vtkIOVideo-8.1.lib
vtkIOXML-8.1.lib
vtkIOXMLParser-8.1.lib
vtkjpeg-8.1.lib
vtkjsoncpp-8.1.lib
vtklibharu-8.1.lib
vtklibxml2-8.1.lib
vtklz4-8.1.lib
vtkmetaio-8.1.lib
vtkNetCDF-8.1.lib
vtknetcdfcpp-8.1.lib
vtkoggtheora-8.1.lib
vtkParallelCore-8.1.lib
vtkParallelMPI-8.1.lib
vtkpng-8.1.lib
vtkproj4-8.1.lib
vtkRenderingAnnotation-8.1.lib
vtkRenderingContext2D-8.1.lib
vtkRenderingContextOpenGL2-8.1.lib
vtkRenderingCore-8.1.lib
vtkRenderingFreeType-8.1.lib
vtkRenderingGL2PSOpenGL2-8.1.lib
vtkRenderingImage-8.1.lib
vtkRenderingLabel-8.1.lib
vtkRenderingLOD-8.1.lib
vtkRenderingOpenGL2-8.1.lib
vtkRenderingQt-8.1.lib
vtkRenderingVolume-8.1.lib
vtkRenderingVolumeOpenGL2-8.1.lib
vtksqlite-8.1.lib
vtksys-8.1.lib
vtktiff-8.1.lib
vtkverdict-8.1.lib
vtkViewsContext2D-8.1.lib
vtkViewsCore-8.1.lib
vtkViewsInfovis-8.1.lib
vtkViewsQt-8.1.lib
vtkzlib-8.1.lib
libboost_atomic-vc140-mt-x64-1_67.lib
libboost_chrono-vc140-mt-x64-1_67.lib
libboost_container-vc140-mt-x64-1_67.lib
libboost_context-vc140-mt-x64-1_67.lib
libboost_contract-vc140-mt-x64-1_67.lib
libboost_coroutine-vc140-mt-x64-1_67.lib
libboost_date_time-vc140-mt-x64-1_67.lib
libboost_exception-vc140-mt-x64-1_67.lib
libboost_fiber-vc140-mt-x64-1_67.lib
libboost_filesystem-vc140-mt-x64-1_67.lib
libboost_graph-vc140-mt-x64-1_67.lib
libboost_graph_parallel-vc140-mt-x64-1_67.lib
libboost_iostreams-vc140-mt-x64-1_67.lib
libboost_locale-vc140-mt-x64-1_67.lib
libboost_log-vc140-mt-x64-1_67.lib
libboost_log_setup-vc140-mt-x64-1_67.lib
libboost_math_c99-vc140-mt-x64-1_67.lib
libboost_math_c99f-vc140-mt-x64-1_67.lib
libboost_math_c99l-vc140-mt-x64-1_67.lib
libboost_math_tr1-vc140-mt-x64-1_67.lib
libboost_math_tr1f-vc140-mt-x64-1_67.lib
libboost_math_tr1l-vc140-mt-x64-1_67.lib
libboost_mpi-vc140-mt-x64-1_67.lib
libboost_prg_exec_monitor-vc140-mt-x64-1_67.lib
libboost_program_options-vc140-mt-x64-1_67.lib
libboost_python36-vc140-mt-x64-1_67.lib
libboost_random-vc140-mt-x64-1_67.lib
libboost_regex-vc140-mt-x64-1_67.lib
libboost_serialization-vc140-mt-x64-1_67.lib
libboost_signals-vc140-mt-x64-1_67.lib
libboost_stacktrace_noop-vc140-mt-x64-1_67.lib
libboost_stacktrace_windbg-vc140-mt-x64-1_67.lib
libboost_stacktrace_windbg_cached-vc140-mt-x64-1_67.lib
libboost_system-vc140-mt-x64-1_67.lib
libboost_test_exec_monitor-vc140-mt-x64-1_67.lib
libboost_thread-vc140-mt-x64-1_67.lib
libboost_timer-vc140-mt-x64-1_67.lib
libboost_type_erasure-vc140-mt-x64-1_67.lib
libboost_unit_test_framework-vc140-mt-x64-1_67.lib
libboost_wave-vc140-mt-x64-1_67.lib
libboost_wserialization-vc140-mt-x64-1_67.lib
opencv_world341.lib
pcl_common_release.lib
pcl_cuda_features_release.lib
pcl_cuda_sample_consensus_release.lib
pcl_cuda_segmentation_release.lib
pcl_features_release.lib
pcl_filters_release.lib
pcl_gpu_containers_release.lib
pcl_gpu_features_release.lib
pcl_gpu_octree_release.lib
pcl_gpu_segmentation_release.lib
pcl_gpu_surface_release.lib
pcl_gpu_utils_release.lib
pcl_io_ply_release.lib
pcl_io_release.lib
pcl_kdtree_release.lib
pcl_keypoints_release.lib
pcl_ml_release.lib
pcl_octree_release.lib
pcl_outofcore_release.lib
pcl_people_release.lib
pcl_recognition_release.lib
pcl_registration_release.lib
pcl_sample_consensus_release.lib
pcl_search_release.lib
pcl_segmentation_release.lib
pcl_stereo_release.lib
pcl_surface_release.lib
pcl_tracking_release.lib
pcl_visualization_release.lib
pdalcpp.lib
pdal_arbiter.lib
pdal_boost.lib
pdal_jsoncpp.lib
pdal_kazhdan.lib
pdal_util.lib
)
